unpackaged/main/default/objects/Customer_Feedback__c/fields/Aspect_Reply__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Reply__c</fullName>
    <label>Aspect Reply</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>