unpackaged/main/default/objects/Customer_Feedback__c/fields/Customer_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Display_Name__c</fullName>
    <label>Customer Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>