unpackaged/main/default/objects/Customer_Feedback__c/fields/Customer_Trustpilot_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trustpilot_Id__c</fullName>
    <label>Customer Trustpilot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>