unpackaged/main/default/objects/Customer_Feedback__c/fields/Is_verified__c.field-meta.xml
<CustomField>
    <fullName>Is_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is verified</label>
    <type>Checkbox</type>
</CustomField>