unpackaged/main/default/objects/Customer_Feedback__c/fields/Job_Amount__c.field-meta.xml
<CustomField>
    <fullName>Job_Amount__c</fullName>
    <formula>Reference_Job__r.Earliest_Work_Order_by_Requested_Date__r.Charge_Total_Incl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>