unpackaged/main/default/objects/Customer_Feedback__c/fields/Job_Type_Trade__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Trade__c</fullName>
    <formula>Reference_Job__r.Job_Type_Trade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type Trade</label>
    <type>Text</type>
</CustomField>