unpackaged/main/default/objects/Customer_Feedback__c/fields/Master_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Master_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Feedback</label>
    <referenceTo>Customer_Feedback__c</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>