unpackaged/main/default/objects/Customer_Feedback__c/fields/Number_of_Reviews_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviews_by_Customer__c</fullName>
    <label>Number of Reviews by Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>