unpackaged/main/default/objects/Customer_Feedback__c/fields/Referece_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Referece_Id_Text__c</fullName>
    <label>Referece Id Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>