unpackaged/main/default/objects/Customer_Feedback__c/fields/Reference_Job__c.field-meta.xml
<CustomField>
    <fullName>Reference_Job__c</fullName>
    <label>Reference Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>