unpackaged/main/default/objects/Customer_Feedback__c/fields/Reply_CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>Reply_CreatedAt__c</fullName>
    <label>Reply CreatedAt</label>
    <type>DateTime</type>
</CustomField>