unpackaged/main/default/objects/Customer_Feedback__c/fields/Reply_UpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>Reply_UpdatedAt__c</fullName>
    <label>Reply UpdatedAt</label>
    <type>DateTime</type>
</CustomField>