unpackaged/main/default/objects/Customer_Feedback__c/fields/Review_CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>Review_CreatedAt__c</fullName>
    <label>Review CreatedAt</label>
    <type>DateTime</type>
</CustomField>