unpackaged/main/default/objects/Customer_Feedback__c/fields/Review_Id__c.field-meta.xml
<CustomField>
    <fullName>Review_Id__c</fullName>
    <label>Review Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>