unpackaged/main/default/objects/Customer_Feedback__c/fields/Review_Text__c.field-meta.xml
<CustomField>
    <fullName>Review_Text__c</fullName>
    <label>Review Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>