unpackaged/main/default/objects/Customer_Feedback__c/fields/Review_UpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>Review_UpdatedAt__c</fullName>
    <label>Review UpdatedAt</label>
    <type>DateTime</type>
</CustomField>