unpackaged/main/default/objects/Customer_Feedback__c/fields/Review_Verification_Level__c.field-meta.xml
<CustomField>
    <fullName>Review_Verification_Level__c</fullName>
    <label>Review Verification Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>