unpackaged/main/default/objects/Customer_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_Job__c</columns>
    <columns>Stars__c</columns>
    <columns>Title__c</columns>
    <columns>Master_Feedback__c</columns>
    <columns>Review_CreatedAt__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>